implement the backend pipeline